<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
            android:id="@+id/action_import"
            android:icon="@drawable/ic_down_24dp"
            android:title="@string/action_import"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_new"
            android:icon="@drawable/ic_plus_24dp"
            android:title="@string/action_new"
            app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never"/>

</menu>