<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <Button
            android:text="@string/action_manage_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_manage_cards"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="openManageCardsMain"/>
    <Button
            android:text="@string/action_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_settings" app:layout_constraintEnd_toEndOf="@+id/button_manage_cards"
            app:layout_constraintStart_toStartOf="@+id/button_manage_cards" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_manage_cards" android:onClick="openSettings"/>
    <Button
            android:text="@string/action_learn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_learn" app:layout_constraintStart_toStartOf="@+id/button_manage_cards"
            app:layout_constraintEnd_toEndOf="@+id/button_manage_cards" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_settings"/>

</android.support.constraint.ConstraintLayout>